--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "clarifai": "^2.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-particles-js": "^3.6.0",
     "react-scripts": "4.0.3",
     "react-tilt": "^0.1.4",
     "tachyons": "^4.12.0",
-    "tsparticles": "^1.37.4",
+    "react-tsparticles": "^1.37.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
